# spline_rl

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  build.sh  enter.sh  pyproject.toml  run.sh  setup.py
experiments/: air_hockey_deploy.py  air_hockey_episodic_exp.py  air_hockey_test.py  box_pushing_episodic_exp.py  kinodynamic_cup_episodic_exp.py  kinodynamic_cup_test.py  kinodynamic_deploy.py  launch_bsmp.py  launch_dummy.py  launch_omnisafe.py  launch_omnisafe_kino.py  launch_prodmp.py  omnisafe_baseline_exp.py  omnisafe_kino_baseline_exp.py  omnisafe_test.py  omnisafe_test_kino.py
paper/: plot_J_airhokey.py  plot_J_kino.py  plot_airhockey_stats.py  plot_kino_stats.py  real.py
spline_rl/: air_hockey_episodic_exp.py  launch_bsmp.py  launch_dummy.py
spline_rl/algorithm/: bsmp_eppo.py  bsmp_eppo_lcs.py
spline_rl/distribution/: bsmp_distribution.py
spline_rl/envs/: __init__.py  air_hockey_env.py  air_hockey_env_acc.py  box_pushing_env.py  kinodynamic_cup_env.py  kinodynamic_cup_env_acc.py  omnisafe_wrapper.py
spline_rl/policy/: bsmp_policy.py  bsmp_policy_box_pushing.py  bsmp_policy_kino.py  bsmp_policy_stop.py  bsmp_unstructured_policy.py  bsmp_unstructured_policy_kino.py  mp_policy.py  prodmp_policy.py  prodmp_policy_kino.py  promp_policy.py  promp_policy_kino.py
spline_rl/urdf/: iiwa_cup.urdf  panda.urdf
spline_rl/utils/: agent_builder.py  box_pushing_network.py  bspline.py  collisions.py  collisions_numpy.py  constants.py  constraints.py  context_builder.py  env_builder.py  gaussian_derivative.py  kino_network.py  lcs_network.py  (+3 more)
(+4 files in other folders)
