[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "spline_rl"
dependencies = [
    "nlopt",
    "osqp",
    "mp-pytorch",
    "hiyapyco",
    "imageio",
    "wandb",
    "hydra",
    "urdf_parser_py",
    "protobuf==4.23.0",
    "experiment_launcher"
    ]

requires-python = ">=3.8"
authors = [{name="Piotr Kicki", email="piotr.kicki@ideas-ncbr.pl"}]

maintainers = [{ name="Piotr Kicki", email="piotr.kicki@ideas-ncbr.pl"}]
description = 'Learning to plan under constraints'
readme = "README.md"
#license = { file= "LICENSE" }
keywords = ["Reinforcement Learning", "Safe Reinforcement Learning", "Learning to Plan"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["version", "optional-dependencies"]
